--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/nav-bar.css" />
     <script src="js/script.js"></script>
     <title>Pocket World</title>
   </head>
   <body>
-    
+    <nav class="fixed-nav-bar">
+      <div id="menu" class="menu">
+          
+        <a class="sitename" href="index.html">Pocket World</a>
+        <a class="show" href="#menu">Menu</a>
+        <a class="hide" href="#hidemenu">Menu</a>
+        <a href=""><button class="search_button"></button></a>
+
+        <ul class="menu-items">
+          <li><a href=" ">Home</a></li>
+          <li class="special"><a href=" ">Search</a></li>
+          <li><a href=" ">Friends</a></li>
+          <li><a href=" ">Me</a></li>
+          <li><a href=" ">Logout</a></li>
+        </ul>
+      </div>
+    </nav>
 
     <div class="wrapper">
       <div class="left_column">left</div>
