added profile side bar

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/nav-bar.css" />
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <script src="js/script.js"></script>
     <title>Pocket World</title>
   </head>
   <body>
     <nav class="fixed-nav-bar">
       <div id="menu" class="menu">
-          
         <a class="sitename" href="index.html">Pocket World</a>
         <a class="show" href="#menu">Menu</a>
         <a class="hide" href="#hidemenu">Menu</a>
@@ -29,7 +30,36 @@
     </nav>
 
     <div class="wrapper">
-      <div class="left_column">left</div>
+      <div class="left_column">
+        <div class="container">
+          <div class="profile">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="thumbnail"
+            />
+
+            <h3 class="name">Beverly Little</h3>
+            <p class="email">example@gmail.com</p>
+          </div>
+
+          <div class="social-icons">
+            <div class="icon">
+              <a href="#"><i class="fas fa-users"></i></a>
+              <h4>Friends</h4>
+              <p>12.8k</p>
+            </div>
+
+            <div class="icon">
+              <a href="#"><i class="fas fa-ban"></i></a>
+              <h4>Blocked People</h4>
+              <p>320</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
       <div class="middle_column">middle</div>
       <div class="right_column">right</div>
     </div>
