--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/nav-bar.css" />
     <link rel="stylesheet" href="css/profile.css" />
+    <link rel="stylesheet" href="css/people-u-may-know.css" />
     <link rel="stylesheet" href="css/post-box.css" />
     <link
       rel="stylesheet"
@@ -22,7 +23,6 @@
         <a class="show" href="#menu">Menu</a>
         <a class="hide" href="#hidemenu">Menu</a>
         <a href="">
-          
           <button class="search_button"><i class="fas fa-search"></i></button>
         </a>
 
@@ -68,7 +68,7 @@
 
             <div class="icon">
               <a href="#"><i class="fas fa-ban"></i></a>
-              <h4>Blocked People</h4>
+              <h4>Blocked</h4>
               <p>320</p>
             </div>
           </div>
@@ -87,7 +87,19 @@
         </div>
       </div>
 
-      <div class="right_column">right</div>
+      <div class="right_column">
+        <div class="container">
+          <div class="heading">People you may know</div>
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Blocked People</h3>
+            <a href=""><i class="fas fa-plus-circle"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
