--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/people-u-may-know.css" />
     <link rel="stylesheet" href="css/status-box.css" />
     <link rel="stylesheet" href="css/post-box.css" />
+    <link rel="stylesheet" href="css/modal.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
@@ -24,7 +25,7 @@
         <a class="show" href="#menu">Menu</a>
         <a class="hide" href="#hidemenu">Menu</a>
         <a href="">
-          <button class="search_button"><i class="fas fa-search"></i></button>
+          <a href="#demo-modal" class="search_button"><i class="fas fa-search"></i>Search for Friends</a>
         </a>
 
         <ul class="menu-items">
@@ -32,7 +33,7 @@
             <a href=" "><i class="fas fa-home"></i> Home</a>
           </li>
           <li class="special">
-            <a href=" "><i class="fas fa-search"></i> Search</a>
+            <a href=""><i class="fas fa-search"></i> Search</a>
           </li>
           <li>
             <a href=" "><i class="fas fa-users"></i> Friends</a>
@@ -203,5 +204,23 @@
         </div>
       </div>
     </div>
+
+    <!-- my modals -->
+    <div id="demo-modal" class="modal">
+      <div class="modal__content">
+          <h1>CSS Only Modal</h1>
+  
+          <p>
+              You can use the :target pseudo-class to create a modals with Zero JavaScript. Enjoy!
+          </p>
+  
+          <div class="modal__footer">
+              Made with <i class="fa fa-heart"></i>, by <a href="https://twitter.com/denicmarko" target="_blank">@denicmarko</a>
+          </div>
+  
+          <a href="#" class="modal__close">&times;</a>
+      </div>
+  </div>
+
   </body>
 </html>
