search modal intial layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="show" href="#menu">Menu</a>
         <a class="hide" href="#hidemenu">Menu</a>
         <a href="">
-          <a href="#demo-modal" class="search_button"><i class="fas fa-search"></i>Search for Friends</a>
+          <a href="#srch-modal" class="search_button"><i class="fas fa-search"></i>Search for Friends</a>
         </a>
 
         <ul class="menu-items">
@@ -206,19 +206,13 @@
     </div>
 
     <!-- my modals -->
-    <div id="demo-modal" class="modal">
-      <div class="modal__content">
-          <h1>CSS Only Modal</h1>
+    <div id="srch-modal" class="search-modal">
+      <div class="search-modal__content">
+          <h1>Search for potintial Friends</h1>
+          <hr>
   
-          <p>
-              You can use the :target pseudo-class to create a modals with Zero JavaScript. Enjoy!
-          </p>
-  
-          <div class="modal__footer">
-              Made with <i class="fa fa-heart"></i>, by <a href="https://twitter.com/denicmarko" target="_blank">@denicmarko</a>
-          </div>
-  
-          <a href="#" class="modal__close">&times;</a>
+        
+          <a href="#" class="search-modal__close"><i class="fas fa-times-circle"></i></a>
       </div>
   </div>
 
