--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <title>Facebook</title>
-    <title>Facebook</title>
+    <link rel="stylesheet" href="./css/login.css">
+    <title>Pocket World</title>
 </head>
 <body>
     <div class="content">
