--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content">
 
         <div class="title">
-            <h1>POCKET WORLD</h1>
+            <h1><span>POCKET</span> WORLD</h1>
         </div>
         <div id="form-container">
             <div id="login-container">  
