--- a/index.html
+++ b/index.html
@@ -1,41 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/login.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/login.css" />
     <title>Pocket World</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="content">
-
-        <div class="title">
-            <h1><span>POCKET</span> WORLD</h1>
+      <div class="title">
+        <h1><span>POCKET</span> WORLD</h1>
+      </div>
+      <div id="form-container">
+        <div id="login-container">
+          <form id="login-form" class="login form">
+            <input
+              type="text"
+              id="login-email"
+              name="email"
+              placeholder="Email adress"
+            /><br /><br />
+            <input
+              type="password"
+              id="login-password"
+              name="password"
+              placeholder="Password"
+            /><br /><br />
+            <input
+              type="submit"
+              value="Log in"
+              id="signin-btn"
+              class="form-btn"
+            />
+          </form>
         </div>
-        <div id="form-container">
-            <div id="login-container">  
-                <form id="login-form" class="login form">
-                    <input type="text" id="login-email" name="email" placeholder="Email adress"><br><br>
-                    <input type="password" id="login-password" name="password" placeholder="Password"><br><br>
-                    <input type="submit" value="Log in" id="signin-btn" class="form-btn">
-                </form>
-            </div>
-            <div id="signup-container">
-                <form class="signup form">
-                    <input type="text" id="register-first-name" name="fname" placeholder="First Name"><br><br>
-                    <input type="text" id="register-last-name" name="lname" placeholder="Last Name"><br><br>
-                    <input type="text" id="register-email" name="fname" placeholder="Email"><br><br>
-                    <input type="password" id="register-password" name="lname" placeholder="Password"><br><br>
-                    <input type="submit" value="Register" id="signup-btn" class="form-btn">
-                </form>
-            </div>
+        <div id="signup-container">
+          <form class="signup form">
+            <input
+              type="text"
+              id="register-first-name"
+              name="fname"
+              placeholder="First Name"
+            /><br /><br />
+            <input
+              type="text"
+              id="register-last-name"
+              name="lname"
+              placeholder="Last Name"
+            /><br /><br />
+            <input
+              type="text"
+              id="register-email"
+              name="fname"
+              placeholder="Email"
+            /><br /><br />
+            <input
+              type="password"
+              id="register-password"
+              name="lname"
+              placeholder="Password"
+            /><br /><br />
+            <input
+              type="submit"
+              value="Register"
+              id="signup-btn"
+              class="form-btn"
+            />
+          </form>
         </div>
+      </div>
     </div>
-<script src="./scripts/script.js"></script>
-</body>
+    <script src="./scripts/script.js"></script>
+  </body>
 </html>
